--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -14,7 +16,7 @@
     "\n",
     "import sys\n",
     "sys.path.append(\"..\")\n",
-    "from model import lstm,cnn"
+    "from models import lstm,cnn"
    ]
   },
   {
@@ -26,8 +28,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "import preprocess\n",
@@ -38,8 +42,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "init_cell": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -80,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +95,7 @@
        "'标准间太差 房间还不如3星的 而且设施非常陈旧.建议酒店把老的标准间从新改善.\\n\\n\\n\\n'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +127,7 @@
        "'标准间太差 房间还不如3星的 而且设施非常陈旧.建议酒店把老的标准间从新改善.    '"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +170,7 @@
        "'标准间太差 房间还不如3星的 而且设施非常陈旧 建议酒店把老的标准间从新改善'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,9 +188,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "Loading model from cache C:\\Users\\ADMINI~1\\AppData\\Local\\Temp\\jieba.cache\n",
+      "Loading model cost 0.945 seconds.\n",
+      "Prefix dict has been built succesfully.\n"
+     ]
+    }
+   ],
    "source": [
     "import jieba\n",
     "\n",
@@ -196,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +222,7 @@
        "'标准间 太 差   房间 还 不如 3 星 的   而且 设施 非常 陈旧   建议 酒店 把 老 的 标准间 从 新 改善'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +279,7 @@
        "'标准间 太 差 房间 星 设施 陈旧 建议 酒店 标准间 新 改善'"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,21 +292,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 识别"
+    "# TF-IDF + RF"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TF-IDF + RF"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### TFIDF"
+    "## TFIDF"
    ]
   },
   {
@@ -309,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 分离训练集和验证集"
+    "## 分离训练集和验证集"
    ]
   },
   {
@@ -339,7 +349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### RF"
+    "## RF"
    ]
   },
   {
@@ -400,25 +410,352 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## RNN"
+    "# LSTM"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CNN"
+    "## 建立及转化词典"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word2vocab = preprocess.create_vocab(data)\n",
+    "\n",
+    "temp = list()\n",
+    "for sentence in data:\n",
+    "    sent_index = list()\n",
+    "    for word in sentence.split():\n",
+    "        index = word2vocab[word]\n",
+    "        sent_index.append(index)\n",
+    "    temp.append(sent_index)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 获取最大长度的句子"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "394"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 获取最大长度的句子\n",
+    "max_sentence = max(temp, key = lambda x: len(x))\n",
+    "max_sentence_len = len(max_sentence)\n",
+    "max_sentence_len"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 统一长度"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence_len =  120\n",
+    "\n",
+    "for i,sentence_indexes in enumerate(temp):\n",
+    "    sentence_indexes.extend([0] * sentence_len)\n",
+    "    sentence_indexes = sentence_indexes[:sentence_len]\n",
+    "\n",
+    "    temp[i] = sentence_indexes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1953, 120)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = np.asarray(temp)\n",
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 建立模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\users\\administrator\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\tensorflow\\python\\keras\\_impl\\keras\\backend.py:1456: calling reduce_sum (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "keep_dims is deprecated, use keepdims instead\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "embedding_4 (Embedding)      (None, None, 200)         2381000   \n",
+      "_________________________________________________________________\n",
+      "lstm_1 (LSTM)                (None, 120)               154080    \n",
+      "_________________________________________________________________\n",
+      "dense_6 (Dense)              (None, 80)                9680      \n",
+      "_________________________________________________________________\n",
+      "dense_7 (Dense)              (None, 1)                 81        \n",
+      "=================================================================\n",
+      "Total params: 2,544,841\n",
+      "Trainable params: 2,544,841\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "from imp import reload\n",
+    "reload(lstm)\n",
+    "\n",
+    "voc_size = len(word2vocab)\n",
+    "lstm_model = lstm.create_lstm(voc_size)\n",
+    "lstm_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lstm_model.compile(optimizer=tf.train.AdamOptimizer(),loss=\"binary_crossentropy\",metrics=[\"accuracy\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 分离训练集验证集"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sklearn\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# pos转化为1，neg为0\n",
+    "temp_label = list()\n",
+    "for sub_label in label:\n",
+    "    v = 1 if sub_label == \"pos\" else 0\n",
+    "    temp_label.append(v)\n",
+    "label = temp_label\n",
+    "    \n",
+    "X_train, X_test, y_train, y_test = train_test_split(data,label,test_size = 0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 训练"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 1757 samples, validate on 196 samples\n",
+      "Epoch 1/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 0.4022 - acc: 0.7126 - val_loss: 0.0630 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 2/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 6s 4ms/step - loss: 0.0387 - acc: 1.0000 - val_loss: 0.0107 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 3/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 6s 4ms/step - loss: 0.0074 - acc: 1.0000 - val_loss: 0.0030 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 4/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 0.0023 - acc: 1.0000 - val_loss: 0.0011 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 5/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 8.9652e-04 - acc: 1.0000 - val_loss: 5.3177e-04 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 6/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 6s 4ms/step - loss: 4.4864e-04 - acc: 1.0000 - val_loss: 3.0717e-04 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 7/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 6s 4ms/step - loss: 2.7065e-04 - acc: 1.0000 - val_loss: 2.0491e-04 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 8/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 1.8681e-04 - acc: 1.0000 - val_loss: 1.5275e-04 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 9/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 1.4267e-04 - acc: 1.0000 - val_loss: 1.2293e-04 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 10/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 1.1714e-04 - acc: 1.0000 - val_loss: 1.0529e-04 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 11/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 8s 5ms/step - loss: 1.0156e-04 - acc: 1.0000 - val_loss: 9.3551e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 12/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 9s 5ms/step - loss: 9.1048e-05 - acc: 1.0000 - val_loss: 8.5490e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 13/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 8s 4ms/step - loss: 8.3733e-05 - acc: 1.0000 - val_loss: 7.9591e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 14/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 8s 4ms/step - loss: 7.8259e-05 - acc: 1.0000 - val_loss: 7.5000e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 15/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 8s 5ms/step - loss: 7.3952e-05 - acc: 1.0000 - val_loss: 7.1261e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 16/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 7.0392e-05 - acc: 1.0000 - val_loss: 6.8078e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 17/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 6.7329e-05 - acc: 1.0000 - val_loss: 6.5273e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 18/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 8s 4ms/step - loss: 6.4616e-05 - acc: 1.0000 - val_loss: 6.2761e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 19/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 9s 5ms/step - loss: 6.2165e-05 - acc: 1.0000 - val_loss: 6.0451e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 20/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 5.9896e-05 - acc: 1.0000 - val_loss: 5.8278e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 21/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 5.7773e-05 - acc: 1.0000 - val_loss: 5.6273e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 22/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 5.5787e-05 - acc: 1.0000 - val_loss: 5.4351e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 23/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 5.3889e-05 - acc: 1.0000 - val_loss: 5.2515e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 24/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 5.2064e-05 - acc: 1.0000 - val_loss: 5.0731e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 25/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 8s 4ms/step - loss: 5.0291e-05 - acc: 1.0000 - val_loss: 4.8992e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 26/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 8s 5ms/step - loss: 4.8560e-05 - acc: 1.0000 - val_loss: 4.7294e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 27/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 8s 5ms/step - loss: 4.6871e-05 - acc: 1.0000 - val_loss: 4.5637e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 28/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 4.5221e-05 - acc: 1.0000 - val_loss: 4.4019e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 29/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 4.3613e-05 - acc: 1.0000 - val_loss: 4.2440e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 30/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 4.2043e-05 - acc: 1.0000 - val_loss: 4.0901e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 31/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 4.0512e-05 - acc: 1.0000 - val_loss: 3.9406e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 32/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 3.9030e-05 - acc: 1.0000 - val_loss: 3.7960e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 33/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 3.7592e-05 - acc: 1.0000 - val_loss: 3.6552e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 34/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 3.6195e-05 - acc: 1.0000 - val_loss: 3.5186e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 35/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 8s 5ms/step - loss: 3.4838e-05 - acc: 1.0000 - val_loss: 3.3860e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 36/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 3.3522e-05 - acc: 1.0000 - val_loss: 3.2575e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 37/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 3.2247e-05 - acc: 1.0000 - val_loss: 3.1331e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 38/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 8s 5ms/step - loss: 3.1013e-05 - acc: 1.0000 - val_loss: 3.0130e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 39/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 2.9836e-05 - acc: 1.0000 - val_loss: 2.9014e-05 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 40/40\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 7s 4ms/step - loss: 2.8728e-05 - acc: 1.0000 - val_loss: 2.7935e-05 - val_acc: 1.0000\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras._impl.keras.callbacks.History at 0x1a4ae320>"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lstm_model.fit(X_train,y_train,epochs=40,batch_size=512,validation_data=(X_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CNN"
    ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Initialization Cell",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
