--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {
     "init_cell": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {
     "init_cell": true
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {
     "init_cell": true
    },
@@ -86,8 +86,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "init_cell": true
+   },
    "outputs": [
     {
      "data": {
@@ -95,7 +97,7 @@
        "'标准间太差 房间还不如3星的 而且设施非常陈旧.建议酒店把老的标准间从新改善.\\n\\n\\n\\n'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,8 +108,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "for i,doc in enumerate(data):\n",
@@ -118,8 +122,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "init_cell": true
+   },
    "outputs": [
     {
      "data": {
@@ -127,7 +133,7 @@
        "'标准间太差 房间还不如3星的 而且设施非常陈旧.建议酒店把老的标准间从新改善.    '"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,8 +151,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "import re\n",
@@ -161,8 +169,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 30,
+   "metadata": {
+    "init_cell": true
+   },
    "outputs": [
     {
      "data": {
@@ -170,7 +180,7 @@
        "'标准间太差 房间还不如3星的 而且设施非常陈旧 建议酒店把老的标准间从新改善'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,8 +198,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 31,
+   "metadata": {
+    "init_cell": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -197,7 +209,7 @@
      "text": [
       "Building prefix dict from the default dictionary ...\n",
       "Loading model from cache C:\\Users\\ADMINI~1\\AppData\\Local\\Temp\\jieba.cache\n",
-      "Loading model cost 0.945 seconds.\n",
+      "Loading model cost 1.034 seconds.\n",
       "Prefix dict has been built succesfully.\n"
      ]
     }
@@ -213,8 +225,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "init_cell": true
+   },
    "outputs": [
     {
      "data": {
@@ -222,7 +236,7 @@
        "'标准间 太 差   房间 还 不如 3 星 的   而且 设施 非常 陈旧   建议 酒店 把 老 的 标准间 从 新 改善'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,8 +254,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "filename = r\"F:\\mystyle\\git\\Sentiment-Analysis\\data\\stopWord.txt\"\n",
@@ -254,8 +270,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 34,
+   "metadata": {
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "for i,doc in enumerate(data):\n",
@@ -752,6 +770,280 @@
    "source": [
     "# CNN"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 建立词的映射"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word2vocab = preprocess.create_vocab(data)\n",
+    "\n",
+    "temp = list()\n",
+    "for sentence in data:\n",
+    "    sent_index = list()\n",
+    "    for word in sentence.split():\n",
+    "        index = word2vocab[word]\n",
+    "        sent_index.append(index)\n",
+    "    temp.append(sent_index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 规整长度"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence_len =  120\n",
+    "\n",
+    "for i,sentence_indexes in enumerate(temp):\n",
+    "    sentence_indexes.extend([0] * sentence_len)\n",
+    "    sentence_indexes = sentence_indexes[:sentence_len]\n",
+    "\n",
+    "    temp[i] = sentence_indexes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1953, 120)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = np.asarray(temp)\n",
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 建立模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "embedding_10 (Embedding)     (None, None, 200)         2381000   \n",
+      "_________________________________________________________________\n",
+      "conv1d_9 (Conv1D)            (None, None, 4)           4004      \n",
+      "_________________________________________________________________\n",
+      "global_max_pooling1d_5 (Glob (None, 4)                 0         \n",
+      "_________________________________________________________________\n",
+      "dense_17 (Dense)             (None, 80)                400       \n",
+      "_________________________________________________________________\n",
+      "dense_18 (Dense)             (None, 1)                 81        \n",
+      "=================================================================\n",
+      "Total params: 2,385,485\n",
+      "Trainable params: 2,385,485\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "from imp import reload\n",
+    "reload(cnn)\n",
+    "\n",
+    "voca_size = len(word2vocab)\n",
+    "cnn_model = cnn.create_cnn(voca_size)\n",
+    "cnn_model.compile(optimizer=tf.train.AdamOptimizer(),loss=\"binary_crossentropy\",metrics=[\"accuracy\"])\n",
+    "cnn_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1953, 120)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 1757 samples, validate on 196 samples\n",
+      "Epoch 1/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 1ms/step - loss: 0.0044 - acc: 1.0000 - val_loss: 0.0042 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 2/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 1ms/step - loss: 0.0040 - acc: 1.0000 - val_loss: 0.0038 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 3/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 1ms/step - loss: 0.0037 - acc: 1.0000 - val_loss: 0.0035 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 4/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 992us/step - loss: 0.0034 - acc: 1.0000 - val_loss: 0.0032 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 5/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 998us/step - loss: 0.0031 - acc: 1.0000 - val_loss: 0.0030 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 6/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 995us/step - loss: 0.0029 - acc: 1.0000 - val_loss: 0.0028 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 7/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 1ms/step - loss: 0.0027 - acc: 1.0000 - val_loss: 0.0026 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 8/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 1ms/step - loss: 0.0025 - acc: 1.0000 - val_loss: 0.0024 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 9/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 1ms/step - loss: 0.0023 - acc: 1.0000 - val_loss: 0.0023 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 10/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 1ms/step - loss: 0.0022 - acc: 1.0000 - val_loss: 0.0021 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 11/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 995us/step - loss: 0.0021 - acc: 1.0000 - val_loss: 0.0020 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 12/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 997us/step - loss: 0.0019 - acc: 1.0000 - val_loss: 0.0019 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 13/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 995us/step - loss: 0.0018 - acc: 1.0000 - val_loss: 0.0018 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 14/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 1ms/step - loss: 0.0017 - acc: 1.0000 - val_loss: 0.0017 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 15/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 998us/step - loss: 0.0016 - acc: 1.0000 - val_loss: 0.0016 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 16/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 994us/step - loss: 0.0015 - acc: 1.0000 - val_loss: 0.0015 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 17/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 1ms/step - loss: 0.0015 - acc: 1.0000 - val_loss: 0.0014 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 18/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 1ms/step - loss: 0.0014 - acc: 1.0000 - val_loss: 0.0013 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 19/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 1ms/step - loss: 0.0013 - acc: 1.0000 - val_loss: 0.0013 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 20/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 1ms/step - loss: 0.0012 - acc: 1.0000 - val_loss: 0.0012 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 21/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 1ms/step - loss: 0.0012 - acc: 1.0000 - val_loss: 0.0012 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 22/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 1ms/step - loss: 0.0011 - acc: 1.0000 - val_loss: 0.0011 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 23/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 1ms/step - loss: 0.0011 - acc: 1.0000 - val_loss: 0.0011 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 24/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 1ms/step - loss: 0.0010 - acc: 1.0000 - val_loss: 0.0010 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 25/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 1ms/step - loss: 9.8992e-04 - acc: 1.0000 - val_loss: 9.6657e-04 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 26/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 1ms/step - loss: 9.4789e-04 - acc: 1.0000 - val_loss: 9.2600e-04 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 27/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 1ms/step - loss: 9.0847e-04 - acc: 1.0000 - val_loss: 8.8791e-04 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 28/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 1ms/step - loss: 8.7143e-04 - acc: 1.0000 - val_loss: 8.5210e-04 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 29/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 994us/step - loss: 8.3659e-04 - acc: 1.0000 - val_loss: 8.1839e-04 - val_acc: 1.0000\n",
+      "\n",
+      "Epoch 30/30\n",
+      "1757/1757 [==============================]1757/1757 [==============================] - 2s 995us/step - loss: 8.0378e-04 - acc: 1.0000 - val_loss: 7.8663e-04 - val_acc: 1.0000\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras._impl.keras.callbacks.History at 0x17170710>"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch = 128\n",
+    "epoch = 30\n",
+    "\n",
+    "# pos转化为1，neg为0\n",
+    "temp_label = list()\n",
+    "for sub_label in label:\n",
+    "    v = 1 if sub_label == \"pos\" else 0\n",
+    "    temp_label.append(v)\n",
+    "label = temp_label\n",
+    "    \n",
+    "cnn_model.fit(\n",
+    "    x=data,\n",
+    "    y =label,\n",
+    "    batch_size=batch,\n",
+    "    epochs=epoch,\n",
+    "    shuffle=True,\n",
+    "    validation_split=0.1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -782,7 +1074,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "244px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
